front-deploy-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    myapp.microservice: front-app
  name: front-deploy-v2
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        myapp.microservice: front-app.v2
    spec:
      containers:
      - env:
        - name: MY_AWESOME_VAR_1
          value: Kubernetes_rocks
        - name: MY_AWESOME_VAR_2
          value: Docker_too
        image: pabloborh/front:v2
        imagePullPolicy: Always
        name: front-pod
        ports:
        - containerPort: 8080
        resources: 
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            memory: "512Mi"
      restartPolicy: Always
