myapp-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    myapp: front-service
  name: my-back
spec:
  ports:
  - name: "http"
    port: 9000
    targetPort: 9000
  selector:
    myapp.microservice: back-app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    myapp: front-service
  name: my-front
spec:
  # type: NodePort
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
    # nodePort: 30555
  selector:
    myapp.microfront: front-app
